{{$NEXT}}

0.64     2017-07-31

- Bug fixes on Windows. Now all plugins except PodSpell (which requires
  ispell) should work on Windows. This should all fix test failures seen in
  CPANTesters on Windows.


0.63     2017-07-23

- All plugins should now work when run against paths that include
  spaces. Previously, many plugins would fail because they were calling system
  commands by passing a single string rather than a list of arguments. Note
  that we now parse the "argv" given in the config file use
  Text::ParseWords::shellwords. It's possible that this could break your setup
  if you have some very pathological configuration options. Bug reports are
  welcome. Fixes #79.


0.62     2017-07-20

- Added support for a global config option "inc". This allows you to prepend
  directories to @INC when running tidyall. This affects both loading classes
  and running plugins. This is equivalent to the command line's -I option.


0.61     2017-07-07

- Fixed a Git pre-commit hook stash bug. The hook would always call "git stash
  pop" even if the call it had just made to "git stash" hadn't added anything
  to the stash. If the stash had anything on it, this could make a mess of
  your working directory. This showed up most often with calls to "git commit
  --amend" where you were trying to just edit the prior commit message, since
  you would be unlikely to have any changes to stash when doing so.


0.60     2017-07-03

- Attempted to fix a bug related to how git stash is used in the git
  pre-commit hook. The "git stash pop" command was happening too early, which
  would block commits when all the files in the index were tidy but the
  working directory contained untidy files. Based on PR #58 from Finn Smith.


0.59     2017-05-14

- Work around issue with Perl::Tidy when Getopt::Long::Configure is called
  before we call Perl::Tidy::perltidy. See
  https://rt.cpan.org/Ticket/Display.html?id=118558 for details.


0.58     2017-03-11
